# Regime-Locus-Matrix

./: .env.example  .gitignore  AGENTS.md  README.md  bootstrap.sh  docker-compose.dev.yml  enterprise.env  hermes_config.example.yaml  hermes_orchestrator.py  pyproject.toml  scotty.py  spock.py
.streamlit/: config.toml
_rebase_abort_backup/: market_hours.py
apps/: README.md  live_trading_dashboard.py
apps/rlm_control_center/: app.py  demo_data.py
apps/rlm_ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
config/: rlm.yaml  volume_profile_config.yaml
configs/: default.yaml
configs/profiles/: backtest.yaml  default.yaml  forecast.yaml  live.yaml
dashboard/: .env.example  next.config.ts  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AppHeader.tsx  DataDirBanner.tsx  PageHero.tsx  RegimeHeatmap.tsx  Sidebar.tsx  StatusBar.tsx
dashboard/lib/: hmmDisplay.ts  tradingOverview.ts
data/processed/: backtest_equity_SPY.csv  backtest_equity_SPY_5m.csv  backtest_trades.csv  backtest_trades_SPY.csv  equity_positions_state.json  equity_trade_log.csv  features_SPY.csv  forecast_features_SPY.csv  forecast_param_search.json  live_nightly_hyperparams.json  live_regime_model.json  macro_dates.json  regime_transition_calibration.json  rolling_backtest_manifest.csv  trade_log.csv  trade_monitor_state.json  universe_trade_plans.json  walkforward_equity.csv  walkforward_equity_SPY.csv  walkforward_summary.csv  walkforward_summary_SPY.csv  walkforward_trades.csv
data/raw/: bars_SPY.csv  option_chain_SPY.csv
deploy/: QUICK-ACTIVATE.txt  TELEGRAM_SETUP.txt  ib-gateway-compose.example.yml  ibgateway-jvm-tuning.txt  ibgateway.env.example  persistence.txt  rlm-control-center.service.example  rlm-finetune.service  rlm-finetune.timer  rlm-master-telegram.service.example  rlm-systems-control-telegram.service.example  rlm-telegram-bot.service.example  rlm-telegram.service.example
deploy/linux/: install-systemd.sh  regime-locus-crew.service  regime-locus-master.service  rlm-challenge-loop.service  rlm-challenge-loop.sh  rlm-forecast.service  rlm-forecast.timer  rlm-host-watchdog.service  rlm-market-close.service  rlm-market-close.timer  rlm-market-hours-start.sh  rlm-market-hours-stop.sh  rlm-market-open.service  rlm-market-open.timer  rlm-nightly-opt.service  rlm-nightly-opt.timer  rlm-weekly-calibrate.service  rlm-weekly-calibrate.timer
deploy/systemd/: ib-gateway.service.example  rlm-master-trader.service.example  rlm-postclose.service.example  rlm-postclose.timer.example  rlm-preopen.service.example  rlm-preopen.timer.example  rlm-walkforward-universe.service  rlm-walkforward-universe.timer
docs/: data-backends.md  doctor.md  persona_pipeline.md  profiles.md  run-manifests.md  runtime-paths.md
hermes_skills/commander/: SKILL.md
hermes_skills/data_monitor/: SKILL.md
hermes_skills/research_analyst/: SKILL.md
market-field-navigator/: README.md
market-field-navigator/backend/: .gitignore  pyproject.toml
market-field-navigator/backend/app/: field_engine.py  main.py  schemas.py
market-field-navigator/backend/app/adapters/: __init__.py  rlm_adapter.py
market-field-navigator/backend/app/tests/: test_field_engine.py
market-field-navigator/frontend/: package-lock.json  package.json  tsconfig.json
notebooks/: regime_stratified_kronos_finetune.ipynb
research/: README.md  finetune_kronos.py  optimize_forecast_params.py  train_coordinate_models.py  train_probabilistic_model.py  upload_kronos_checkpoints_hf.py
research/notebooks/: 03_hmm_hybrid_demo.ipynb
rlm_hermes_tools/: __init__.py  register_rlm_tools.py
scripts/: _dump_plan.py  activate_all_plans.py  activate_rlm_stack.ps1  activate_rlm_stack.sh  analyze_regime_locus.py  analyze_roee_feature_importance.py  analyze_universe_live.py  append_ibkr_stock_history.py  append_option_snapshot.py  build_features.py  build_microstructure_surfaces.py  build_rolling_backtest_dataset.py  calibrate_regime_models.py  check_performance_and_retune.py  deploy_dashboard.ps1  deploy_to_vps.sh  deploy_vps.ps1  diagnose_ibkr.py  diagnose_massive_flatfiles_s3.py  fetch_ibkr.py  fetch_ibkr_stock_parquet.py  fetch_massive.py  fetch_massive_contracts.py  fetch_massive_option_bars.py  fetch_massive_option_quotes.py  fetch_massive_option_trades.py  finetune_kronos.py  fit_regime_transition_calibration.py  ibkr_equity_paper_trade.py  ibkr_paper_trade_from_plans.py  ibkr_place_roee_combo.py  ingest_massive_flatfiles_options.py  inspect_vps_data.py  integration_test.py  live_trading_dashboard.py  migrate_hermes_env_to_openrouter.py  monitor_active_trade_plans.py  morning_briefing.py  optimize_forecast_params.py  pnl_chart_dashboard.py  (+40 more)
scripts/examples/: ib_insync_fetch_stock_example.py
scripts/rlm_control_center/: app.py  custom_css.py  demo_data.py
src/regime_locus_matrix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rlm/: __init__.py  __main__.py  pipeline.py
src/rlm_hermes_tools/: register_rlm_tools.py
tests/: test_backtest_data.py  test_ibkr_stocks.py
tests/integration/: test_cli_backtest.py  test_cli_doctor.py  test_cli_forecast.py  test_cli_ingest.py  test_cli_trade.py  test_full_pipeline_smoke.py  test_vp_wiring.py
tests/unit/: test_artifact_registry.py  test_backtest_cli_batch_skip.py  test_backtest_cli_symbols.py  test_backtest_fills_liquidity.py  test_backtest_metrics.py  test_backtest_service_outputs.py  test_backtest_service_walkforward_agg.py  test_bands.py  test_bars_enrichment.py  test_benchmarks.py  test_chain_match.py  test_challenge.py  test_challenge_daytrade_filters.py  test_challenge_pipeline.py  test_challenge_strategy_map.py  test_check_performance_and_retune.py  test_cli_backtest_batch.py  test_cli_io.py  test_commission.py  test_compute_threads.py  test_coordinate_models.py  test_coordinate_regime.py  test_coordinate_wiring.py  test_data_backend.py  test_data_lake_paths.py  test_data_paths.py  test_decision_row.py  test_degradation.py  test_distribution.py  test_execution_model.py  test_exits.py  test_expiry.py  test_hmm.py  (+90 more)
(+409 files in other folders)
