[project]
name = "regime-locus-matrix"
version = "0.1.1"
description = "RLM - Regime Locus Matrix trading framework"
authors = [{name = "Darrin Vogeli"}]
requires-python = ">=3.10"

dependencies = [
    # Core numeric / statistical
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "numba",
    # Config / serialization
    "pydantic",
    "pyyaml",
    "python-dotenv",
    # Regime models
    "hmmlearn>=0.3.0",
    # Hyperparameter optimization
    "optuna>=3.6.0",
    # Lightweight data fetch (demo / fallback)
    "yfinance",
    "pandas-datareader",
    # Visualization (used in factor diagnostics)
    "matplotlib",
    "seaborn",
    "plotly",
    "tabulate",
    "jinja2",
]

[project.scripts]
rlm = "rlm.cli.main:main"

[project.optional-dependencies]
# Development tooling
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
# Kronos foundation-model forecast layer
# Install: pip install -e ".[kronos]"
kronos = [
    "torch>=2.0.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.33.0",
    "safetensors>=0.6.0",
    "tqdm>=4.66.0",
]
# Microstructure layer: Greeks, GEX/IV surfaces, DuckDB lake
# Install: pip install -e ".[microstructure]"
microstructure = [
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
]
# Telegram Bot
telegram = [
    "python-telegram-bot>=20",
]
# Streamlit apps (terminal, control center, dashboards)
ui = [
    "streamlit>=1.33.0",
    "streamlit-aggrid>=1.0.0",
    "streamlit-option-menu>=0.3.6",
    "kaleido>=0.2.1",
]
# IBKR TWS API — equity history + combo order execution
ibkr = [
    "ibapi",
]
# Massive Flat Files (S3 gzip CSV → Parquet)
flatfiles = [
    "boto3",
    "pyarrow",
]
# Parquet data lake helpers
datalake = [
    "pyarrow",
]
# Options data providers
options_data = [
    "polygon-api-client",
    "yahooquery",
]
# Starfleet AI crew — Scotty / Spock / Kirk agents
# Primary backend: Groq (free, sign up at console.groq.com, set GROQ_API_KEY in .env)
# Fallback backend: Ollama (local, set LLM_BACKEND=ollama, run `ollama serve`)
# No extra Python deps required — uses stdlib urllib only.
agents = [
    "python-dotenv",   # already in core deps; listed here for clarity
]
# Morning briefing protocol
morning = [
    "finnhub-python>=2.4.0",
    "transformers>=4.38.0",
    "vaderSentiment>=3.3.2",
]
# Alternate IB stack (examples only)
ib-insync = [
    "ib_insync",
]
# Scaling / large-dataset processing
scaling = [
    "polars",
    "dask",
    "pyarrow",
]
# Full install — everything except ibkr (requires manual ibapi install)
all = [
    "torch>=2.0.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.33.0",
    "safetensors>=0.6.0",
    "tqdm>=4.66.0",
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
    "streamlit>=1.33.0",
    "streamlit-aggrid>=1.0.0",
    "streamlit-option-menu>=0.3.6",
    "kaleido>=0.2.1",
    "boto3",
    "polygon-api-client",
    "yahooquery",
    "python-telegram-bot>=20",
    "finnhub-python>=2.4.0",
    "transformers>=4.38.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
