[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "regime-locus-matrix"
version = "0.1.1"
description = "RLM - Regime Locus Matrix trading framework"
authors = [{name = "Darrin Vogeli"}]
requires-python = ">=3.10"

dependencies = [
    # Core numeric / statistical
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "numba",
    # Config / serialization
    "pydantic",
    "pyyaml",
    "python-dotenv",
    "psutil",
    # Regime models
    "hmmlearn>=0.3.0",
    # Hyperparameter optimization
    "optuna>=3.6.0",
    # Lightweight data fetch (demo / fallback)
    "yfinance",
    "pandas-datareader",
    # Visualization (used in factor diagnostics)
    "matplotlib",
    "seaborn",
    "plotly",
    "tabulate",
    "jinja2",
]

[project.scripts]
rlm = "rlm.cli.main:main"

[project.optional-dependencies]
# Development tooling
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "scikit-learn>=1.3.0",
]
# Kronos foundation-model forecast layer
# Install: pip install -e ".[kronos]"
kronos = [
    "torch>=2.0.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.33.0",
    "safetensors>=0.6.0",
    "tqdm>=4.66.0",
]
# Microstructure layer: Greeks, GEX/IV surfaces, DuckDB lake
# Install: pip install -e ".[microstructure]"
microstructure = [
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
]
# Telegram Bot
telegram = [
    "python-telegram-bot>=20",
]
# Legacy UI group (Streamlit removed — Next.js dashboard in dashboard/)
ui = [
    "kaleido>=0.2.1",
]
# IBKR TWS API — equity history + combo order execution
ibkr = [
    "ibapi",
]
# Massive Flat Files (S3 gzip CSV → Parquet)
flatfiles = [
    "boto3",
    "pyarrow",
]
# Parquet data lake helpers
datalake = [
    "pyarrow",
]
# Options data providers
options_data = [
    "polygon-api-client",
    "yahooquery",
]
# Hermes agent + RLM tool registration (replaces legacy Starfleet crew).
# Install: pip install -e ".[hermes]"
# Crew uses OpenAI-compatible API: default local Ollama http://127.0.0.1:11434/v1
hermes = [
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git",
]
# Backward-compatible alias (same as hermes)
agents = [
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git",
]
# Morning briefing protocol
morning = [
    "finnhub-python>=2.4.0",
    "transformers>=4.38.0",
    "vaderSentiment>=3.3.2",
]
# Alternate IB stack (examples only)
ib-insync = [
    "ib_insync",
]
# Scaling / large-dataset processing
scaling = [
    "polars",
    "dask",
    "pyarrow",
]
# Full install — everything except ibkr (requires manual ibapi install)
all = [
    "torch>=2.0.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.33.0",
    "safetensors>=0.6.0",
    "tqdm>=4.66.0",
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
    "kaleido>=0.2.1",
    "boto3",
    "polygon-api-client",
    "yahooquery",
    "python-telegram-bot>=20",
    "finnhub-python>=2.4.0",
    "transformers>=4.38.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Line length is handled by Black; long docstrings / help strings are allowed.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# CLI / tests often tweak sys.path before importing project modules.
"scripts/**" = ["E402"]
"tests/**" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.10"
# Pragmatic: ``strict`` produced 500+ legacy errors. Prefer incremental cleanup.
strict = false
warn_unused_configs = true
warn_unused_ignores = false
show_error_codes = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
# Third-party-heavy modules: re-enable per-package once stubs/noise are under control.
check_untyped_defs = false
# Pandas/numpy/statsmodels unions and legacy call sites: tighten incrementally later.
disable_error_code = [
    "arg-type",
    "call-arg",
    "assignment",
    "attr-defined",
    "call-overload",
    "dict-item",
    "import-untyped",
    "index",
    "misc",
    "operator",
    "return-value",
    "union-attr",
    "valid-type",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
